# autonomous_driving

./: .gitignore  KITTI_Pseudo_Lidar.ipynb  LiDAR GTA V.cfg  LiDAR GTA V.sln  README.md
Data processing scripts/: ColorPointCloudsByObjectId_forColoredPointCloud.py  ColorPointCloudsByObjectId_forUncoloredPointCloud.py  ColorizePointCloudsByLabels.py  LiDAR GTA V.cfg  _JoinAllDataIntoAFolder.bat  colorize.py
Data processing scripts/.ipynb_checkpoints/: ViewDepthMap-checkpoint.ipynb
Data processing scripts/GTA_data_samples_processing/: ConvertImageToKittiSize.py  GTASample.py  GTAView.py  KittiImageProc.py  KittiSample.py  LiDAR_PointCloud_points.txt  LoadBinPointclouds.py  Main.py  PCLabeledObject.py  PCRaw.py  Point_cloud_Results.blend  StoreBinToPlyFiles.py  generate_rgb_2d_bb_dataset.py  kitti_util.py
Data processing scripts/GTA_data_samples_processing/Sample1/: LiDAR_PointCloud.ply  LiDAR_PointCloud_labels.txt  LiDAR_PointCloud_labelsDetailed.txt  test_rotated.ply  test_trimmed.ply  test_vehicles.ply  test_vehicles_colored.ply
Data processing scripts/GTA_data_samples_processing/Samples/LiDAR_PointCloud1/: LiDAR_PointCloud_labels.txt  LiDAR_PointCloud_labelsDetailed.txt  LiDAR_PointCloud_rotation.txt  Rotated point cloud.ply
Examples/: depth_map.npy
Examples/LiDAR_PointCloud_3meters/: LiDAR_PointCloud_labelsDetailed.txt  LiDAR_PointCloud_logSampleDebug.txt  LiDAR_PointCloud_rotation.txt
Examples/LiDAR_PointCloud_54centimeters/: LiDAR_PointCloud_logSampleDebug.txt  LiDAR_PointCloud_rotation.txt
Images/LiDAR_PointCloud_3meters/: LiDAR_PointCloud_labels.txt
Images/LiDAR_PointCloud_54centimeters/: LiDAR_PointCloud_labels.txt  LiDAR_PointCloud_labelsDetailed.txt
LiDAR GTA V/: CMakeLists.txt  LiDAR GTA V.sln  LiDAR GTA V.vcxproj  debug.cpp  debug.h  script.cpp  script.h
LiDAR GTA V/tmp/Release/LiDAR GTA V.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LiDAR GTA V.lastbuildstate  LiDAR GTA V.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
_resources/Person collider shape test/: Day and recolored point clouds comparison.blend  LiDAR_PointCloud_labels1.txt  LiDAR_PointCloud_labelsDetailed.txt  LiDAR_PointCloud_points_PC_Cloudy1.ply  LiDAR_PointCloud_points_PC_Day1.ply  LiDAR_PointCloud_points_PC_Day1_Recolored.ply
automation_scripts/: GtaView.py  generate_point_cloud.py  initialize.py  mass_generate.py  setup.py
